[gd_scene load_steps=9 format=3 uid="uid://j7wr7e16o3ic"]

[ext_resource type="Script" uid="uid://dysgxvwr6hacc" path="res://scenes/ui/boons_selection/boons_selection.gd" id="1_5vkxc"]
[ext_resource type="Texture2D" uid="uid://jgmv1d02181a" path="res://assets/gui/main_menu_background.png" id="2_5vkxc"]
[ext_resource type="Texture2D" uid="uid://beeyksb8626y4" path="res://assets/gramps.png" id="3_l2mgi"]

[sub_resource type="Gradient" id="Gradient_fe2o3"]
colors = PackedColorArray(0.0294099, 0.073063, 0.0810991, 1, 0.127457, 0.249696, 0.321985, 0.580392)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1g8jr"]
gradient = SubResource("Gradient_fe2o3")
width = 50

[sub_resource type="LabelSettings" id="LabelSettings_m1kxf"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_b3rxc"]
font_size = 32

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_x2yvf"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(5, 5, 0)
emission_shape_scale = Vector3(5, 5, 1)
emission_shape = 1
emission_sphere_radius = 128.0
angle_min = -118.5
angle_max = 62.6
gravity = Vector3(0, 98, 0)
scale_max = 3.0

[node name="BoonsSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5vkxc")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5vkxc")
expand_mode = 1

[node name="Foreground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_1g8jr")

[node name="Container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Label" type="Label" parent="Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Boons Selection"
label_settings = SubResource("LabelSettings_m1kxf")

[node name="Gramps" type="TextureRect" parent="Container"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("3_l2mgi")
expand_mode = 1

[node name="Boons" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SlotsLabel" type="Label" parent="Container/Boons"]
layout_mode = 2
text = "Available boon slots: 4"
label_settings = SubResource("LabelSettings_b3rxc")

[node name="BoonsContainer" type="GridContainer" parent="Container/Boons"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
columns = 5

[node name="StartButton" type="Button" parent="Container"]
custom_minimum_size = Vector2(100, 42)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Start"

[node name="BackButton" type="Button" parent="Container"]
custom_minimum_size = Vector2(100, 42)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Back"

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(0.747408, 0.580086, 1, 1)
position = Vector2(977, 175)
rotation = -3.14027
amount = 10
sub_emitter = NodePath(".")
lifetime = 3.0
speed_scale = 0.2
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_x2yvf")

[connection signal="pressed" from="Container/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Container/BackButton" to="." method="_on_back_button_pressed"]
